--- a/style.css
+++ b/style.css
@@ -110,3 +110,45 @@ li {
     gap: 20px;
     flex-wrap: wrap;
 }
+
+.container {
+    position: relative;
+    width: 300px;
+    height: 400px;
+  }
+  
+  .image {
+    display: block;
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 400px;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: blue;
+    border-radius: 10px;
+  }
+  
+  .container:hover .overlay {
+    opacity: 0.8;
+  }
+  
+  .text {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: start;
+  }
