--- a/style.css
+++ b/style.css
@@ -94,7 +94,8 @@ li {
     font-weight: 800;
     color: #1F2937;
     text-align: center;
-    margin: 30px;
+    margin-top: 40px;
+    margin-bottom: 15px;
 }
 
 .drivers {
@@ -106,6 +107,8 @@ li {
 
 .cards {
     display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 20px;
     gap: 20px;
     flex-wrap: wrap;
