--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ li {
 }
     
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("imgs/hero-image");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("imgs/ferrari-hero-image.jpg");
     height: 550px;
     background-position: center;
     background-repeat: no-repeat;
