--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .header {
-    display:flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #1F2937;
@@ -27,12 +27,22 @@ body {
     align-items: center;
 }
 
+.left-header {
+    display: flex;
+}
+
 .logo {
     font-size: 24px;
     font-weight: bold;
     color: #F9FAF8;
     display: flex;
     align-items: center;
+    margin-left: 10px;
+}
+
+.logo-car {
+    height: 25px;
+    width: auto;
 }
 
 .links {
@@ -51,19 +61,19 @@ li {
     list-style: none;
     display: flex;
 }
-    
+
 .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("imgs/ferrari-hero-image.jpg");
     height: 550px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;            
+    position: relative;
 }
 
 .hero-text {
     display: flex;
-    flex:1;
+    flex: 1;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -115,15 +125,15 @@ li {
     position: relative;
     width: 300px;
     height: 400px;
-  }
-  
+}
+
 .image {
     display: block;
     width: 100%;
     height: 400px;
     border-radius: 10px;
-  }
-  
+}
+
 .overlay {
     position: absolute;
     top: 0;
@@ -136,12 +146,12 @@ li {
     transition: .5s ease;
     background-color: #008CBA;
     border-radius: 10px;
-  }
-  
+}
+
 .container:hover .overlay {
     opacity: 0.8;
-  }
-  
+}
+
 .text {
     color: white;
     font-size: 20px;
@@ -151,7 +161,7 @@ li {
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: start;
-  }
+}
 
 .quote-page {
     display: flex;
@@ -197,7 +207,7 @@ li {
 .left {
     display: flex;
     flex-direction: column;
-    gap: 10px;   
+    gap: 10px;
 }
 
 .right {
@@ -227,7 +237,7 @@ button {
 }
 
 button:hover {
-  background-color: whitesmoke;
-  opacity: 0.7;
-  color: white;
+    background-color: whitesmoke;
+    opacity: 0.7;
+    color: white;
 }
