--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     font-size: 18px;
     color: #E5E7EB;
     display: flex;
-    gap: 20px;
+    gap: 30px;
 }
 
 a {
@@ -252,5 +252,7 @@ button:active {
 .info {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 10px;
+    align-content: center;
+    align-self: center;
 }
